--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,7 @@
   </head>
 
   <body>
+    {% include 'navbar.html' %}
 
     <div class="container">
       <h1 class = "text-center mt-2 mb-4">Career's Website</h1>
@@ -25,8 +26,18 @@
       </div>
       
       <h2 class = "text-center mt-4 mb-4">About Website</h2>
-      <p class = "lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      
+      <div class = "row" style= "margin-bottom:16px">
+        <div class="col-md-9">
+          <p class = "lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>  
+        </div>
+        <div class="d-none d-md-block col-3">
+          <img class="rounded float-end " src="https://carrer-website.shashwatj8.repl.co/static/people working.jpg"  style="height:200px; width:350px; border-radius:4px"/>
+          
+        </div>
+      </div>
+      
       
       <h3 class = "text-center mt-4 mb-4">Job Positions</h3>
   
@@ -38,5 +49,6 @@
         <p>Copyright, 2023 Career Website</p>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body>
 </html>
