--- a/templates/jobList.html
+++ b/templates/jobList.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="col-2">
-    <button type="button" class="btn btn-outline-primary">Apply</button>  
+    <a href="mailto:shashwatj007@gmail.com?subject=Mail for {{job['Position']}}" type="button" class="btn btn-outline-primary">Apply</a>  
   </div>
   
   
